k8s/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nntr.n2qz.net
  namespace: nntr
  annotations:
    external-dns.alpha.kubernetes.io/target: n2qz.net
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.allow-http: "false"
spec:
  ingressClassName: public
  rules:
    - host: nntr.n2qz.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nntr
                port:
                  number: 3000
  tls:
  - hosts:
    - nntr.n2qz.net
    secretName: tls-cert-nntr.n2qz.net
